append new payment css to pages, rename same properties

--- a/insights.html
+++ b/insights.html
@@ -77,7 +77,7 @@
                                   <div class="flex-item"><div></div></div>
                                 </div>
                               </span>
-                              <span class="a8jt5op dir dir-ltr">
+                              <span class="visually-hidden dir dir-ltr">
                                 Experience hosting dashboard
                               </span>
                             </button>
@@ -290,7 +290,7 @@
                                     class="dir dir-ltr"
                                     id="filter-menu-chip-group-DLS-chipGroup-label"
                                   >
-                                    <span class="a8jt5op dir dir-ltr">
+                                    <span class="visually-hidden dir dir-ltr">
                                       filters
                                     </span>
                                   </div>
@@ -314,7 +314,7 @@
                                 </div>
                                 <span aria-hidden="true">
                                   <span
-                                    class="a8jt5op dir dir-ltr"
+                                    class="visually-hidden dir dir-ltr"
                                     id="experience-filter-describedby"
                                   >
                                     Experience name. Select to access insights
@@ -1314,7 +1314,7 @@
                                       class="form-floating__control"
                                       for="EXPERIENCES_HOST_INSIGHTS_HEADING_SELECT-select"
                                     >
-                                      <span class="a8jt5op dir dir-ltr">
+                                      <span class="visually-hidden dir dir-ltr">
                                         Review range
                                       </span>
                                       <div class="_3hmsj">
@@ -1413,7 +1413,7 @@
                                     href="/experience-hosting/performance?modal=expertise"
                                     class="_1sikdxcl"
                                   >
-                                    <span class="a8jt5op dir dir-ltr">
+                                    <span class="visually-hidden dir dir-ltr">
                                       Expertise
                                     </span>
                                     Details
@@ -1445,7 +1445,7 @@
                                     href="/experience-hosting/performance?modal=access"
                                     class="_1sikdxcl"
                                   >
-                                    <span class="a8jt5op dir dir-ltr">
+                                    <span class="visually-hidden dir dir-ltr">
                                       Insider access
                                     </span>
                                     Details
@@ -1477,7 +1477,7 @@
                                     href="/experience-hosting/performance?modal=connection"
                                     class="_1sikdxcl"
                                   >
-                                    <span class="a8jt5op dir dir-ltr">
+                                    <span class="visually-hidden dir dir-ltr">
                                       Connection
                                     </span>
                                     Details
@@ -1533,7 +1533,7 @@
                                             <span class="_1sz6tyi">1x</span>
                                             <span aria-hidden="true">·</span>
                                             Overall
-                                            <span class="a8jt5op dir dir-ltr">
+                                            <span class="visually-hidden dir dir-ltr">
                                               This issue was noted once by
                                               guests
                                             </span>
@@ -1570,7 +1570,7 @@
                                               <span class="_1sz6tyi">1x</span>
                                               <span aria-hidden="true">·</span>
                                               Overall
-                                              <span class="a8jt5op dir dir-ltr">
+                                              <span class="visually-hidden dir dir-ltr">
                                                 This issue was noted once by
                                                 guests
                                               </span>
@@ -1606,7 +1606,7 @@
                                             <span class="_1sz6tyi">1x</span>
                                             <span aria-hidden="true">·</span>
                                             Price was lower elsewhere
-                                            <span class="a8jt5op dir dir-ltr">
+                                            <span class="visually-hidden dir dir-ltr">
                                               This issue was noted once by
                                               guests
                                             </span>
@@ -1643,7 +1643,7 @@
                                               <span class="_1sz6tyi">1x</span>
                                               <span aria-hidden="true">·</span>
                                               Price was lower elsewhere
-                                              <span class="a8jt5op dir dir-ltr">
+                                              <span class="visually-hidden dir dir-ltr">
                                                 This issue was noted once by
                                                 guests
                                               </span>
