--- a/merchandising.html
+++ b/merchandising.html
@@ -22,7 +22,7 @@
                   --view-to-view-transition-element-visibility: hidden;
                 "
               >
-                <div class="_is5jnq">
+                <div class="page-shell-max-xl-plus">
                   <div class="page-shell">
                     <main id="site-content">
                       <nav
