--- a/signup_login.html
+++ b/signup_login.html
@@ -203,7 +203,7 @@
                                     />
                                     <div class="payment-payout__notice-desc-text">
                                       <div class="mb-6">
-                                        <section role="status" class="e1rue1xl i144hzgs dir dir-ltr">
+                                        <section role="status" class="e1rue1xl page-shell-mobile__alert-attr-notifcation dir dir-ltr">
                                           <div class="ccmqn89 dir dir-ltr">
                                             <div class="c1mzlq0d dir dir-ltr"><svg viewBox="0 0 16 16"
                                                 xmlns="http://www.w3.org/2000/svg" aria-hidden="true"
@@ -2213,7 +2213,7 @@
                                       <input type="hidden" name="authenticity_token"
                                         value="V4$.airbnb.com$h9wEdlWpWFY$9FY6YPDG-paYH_6LhSHJnXS_WyCpOvzJNBLG_sgWer8=">
                                       <div class="mb-6">
-                                        <section role="status" class="e1rue1xl i144hzgs dir dir-ltr">
+                                        <section role="status" class="e1rue1xl page-shell-mobile__alert-attr-notifcation dir dir-ltr">
                                           <div class="ccmqn89 dir dir-ltr">
                                             <div class="c1mzlq0d dir dir-ltr"><svg viewBox="0 0 16 16"
                                                 xmlns="http://www.w3.org/2000/svg" aria-hidden="true" role="presentation"
@@ -3586,7 +3586,7 @@
                                   />
                                   <div class="payment-payout__notice-desc-text">
                                     <div class="mb-6">
-                                      <section role="status" class="e1rue1xl i144hzgs dir dir-ltr">
+                                      <section role="status" class="e1rue1xl page-shell-mobile__alert-attr-notifcation dir dir-ltr">
                                         <div class="ccmqn89 dir dir-ltr">
                                           <div class="c1mzlq0d dir dir-ltr"><svg viewBox="0 0 16 16"
                                               xmlns="http://www.w3.org/2000/svg" aria-hidden="true" role="presentation"
@@ -5598,7 +5598,7 @@
                                     <input type="hidden" name="authenticity_token"
                                       value="V4$.airbnb.com$h9wEdlWpWFY$9FY6YPDG-paYH_6LhSHJnXS_WyCpOvzJNBLG_sgWer8=">
                                       <div class="mb-6">
-                                        <section role="status" class="e1rue1xl i144hzgs dir dir-ltr">
+                                        <section role="status" class="e1rue1xl page-shell-mobile__alert-attr-notifcation dir dir-ltr">
                                           <div class="ccmqn89 dir dir-ltr">
                                             <div class="c1mzlq0d dir dir-ltr"><svg viewBox="0 0 16 16"
                                                 xmlns="http://www.w3.org/2000/svg" aria-hidden="true"
