add coupon modal in payment, rename same properties

--- a/edit/bring.html
+++ b/edit/bring.html
@@ -561,7 +561,7 @@
                                                     for="packing-item-0"
                                                   >
                                                     <div class="_1m2ich98">
-                                                      <div class="_11hx67x">
+                                                      <div class="spinner-chart__input-title-text">
                                                         Item
                                                       </div>
                                                     </div>
@@ -622,7 +622,7 @@
                                                     for="packing-item-1"
                                                   >
                                                     <div class="_1m2ich98">
-                                                      <div class="_11hx67x">
+                                                      <div class="spinner-chart__input-title-text">
                                                         Item
                                                       </div>
                                                     </div>
@@ -683,7 +683,7 @@
                                                     for="packing-item-2"
                                                   >
                                                     <div class="_1m2ich98">
-                                                      <div class="_11hx67x">
+                                                      <div class="spinner-chart__input-title-text">
                                                         Item
                                                       </div>
                                                     </div>
@@ -744,7 +744,7 @@
                                                     for="packing-item-3"
                                                   >
                                                     <div class="_1m2ich98">
-                                                      <div class="_11hx67x">
+                                                      <div class="spinner-chart__input-title-text">
                                                         Item
                                                       </div>
                                                     </div>
@@ -805,7 +805,7 @@
                                                     for="packing-item-4"
                                                   >
                                                     <div class="_1m2ich98">
-                                                      <div class="_11hx67x">
+                                                      <div class="spinner-chart__input-title-text">
                                                         Item
                                                       </div>
                                                     </div>
@@ -866,7 +866,7 @@
                                                     for="packing-item-5"
                                                   >
                                                     <div class="_1m2ich98">
-                                                      <div class="_11hx67x">
+                                                      <div class="spinner-chart__input-title-text">
                                                         Item
                                                       </div>
                                                     </div>
