--- a/payment.html
+++ b/payment.html
@@ -92,7 +92,9 @@
                                 </svg>
                               </div>
                             </div>
-                            <div class="page-shell__menu-item-text">Explore</div>
+                            <div class="page-shell__menu-item-text">
+                              Explore
+                            </div>
                           </a>
                           <a
                             class="_45o9ez"
@@ -126,7 +128,9 @@
                                 </svg>
                               </div>
                             </div>
-                            <div class="page-shell__menu-item-text">Wishlists</div>
+                            <div class="page-shell__menu-item-text">
+                              Wishlists
+                            </div>
                           </a>
                           <a
                             class="_45o9ez"
@@ -137,7 +141,10 @@
                             href="/trips/v1"
                           >
                             <div class="flex">
-                              <div class="page-shell__menu-item-icon-wrapper" style="top: -1px">
+                              <div
+                                class="page-shell__menu-item-icon-wrapper"
+                                style="top: -1px"
+                              >
                                 <svg
                                   viewBox="0 0 32 32"
                                   xmlns="http://www.w3.org/2000/svg"
@@ -168,7 +175,10 @@
                             href="/guest/inbox"
                           >
                             <div class="flex">
-                              <div class="page-shell__menu-item-icon-wrapper" style="top: 1px">
+                              <div
+                                class="page-shell__menu-item-icon-wrapper"
+                                style="top: 1px"
+                              >
                                 <svg
                                   viewBox="0 0 32 32"
                                   xmlns="http://www.w3.org/2000/svg"
@@ -220,7 +230,9 @@
                                 </svg>
                               </div>
                             </div>
-                            <div class="page-shell__menu-item-text">Profile</div>
+                            <div class="page-shell__menu-item-text">
+                              Profile
+                            </div>
                           </a>
                         </div>
                       </nav>
@@ -232,7 +244,10 @@
                                 <div class="block">
                                   <div class="_s8pn9w">
                                     <div class="_2b0qwl">
-                                      <div class="page-shell-mobile__nav-wrapper" role="presentation">
+                                      <div
+                                        class="page-shell-mobile__nav-wrapper"
+                                        role="presentation"
+                                      >
                                         <a
                                           aria-label="Back"
                                           data-testid="back-button"
@@ -333,7 +348,9 @@
                                                     ></div>
                                                   </div>
                                                 </div>
-                                                <div class="confirm-pay__trip-detail-text">
+                                                <div
+                                                  class="confirm-pay__trip-detail-text"
+                                                >
                                                   <div>
                                                     <div class="_1fza94o">
                                                       Entire home
@@ -346,10 +363,14 @@
                                                       villa with infinity pool
                                                     </div>
                                                   </div>
-                                                  <div class="confirm-pay__trip-detail-review">
+                                                  <div
+                                                    class="confirm-pay__trip-detail-review"
+                                                  >
                                                     <div class="mr-2">
                                                       <div class="hidden">
-                                                        <span class="confirm-pay__trip-detail-rate-wrapper">
+                                                        <span
+                                                          class="confirm-pay__trip-detail-rate-wrapper"
+                                                        >
                                                           <span
                                                             class="visually-hidden dir dir-ltr"
                                                           >
@@ -393,7 +414,9 @@
                                                         </span>
                                                       </div>
                                                       <div class="_17ctt5">
-                                                        <span class="confirm-pay__trip-detail-rate-wrapper">
+                                                        <span
+                                                          class="confirm-pay__trip-detail-rate-wrapper"
+                                                        >
                                                           <span
                                                             class="visually-hidden dir dir-ltr"
                                                           >
@@ -443,7 +466,9 @@
                                                       <span class="_a7a5sx">
                                                         •
                                                       </span>
-                                                      <span class="confirm-pay__trip-category-icon">
+                                                      <span
+                                                        class="confirm-pay__trip-category-icon"
+                                                      >
                                                         <svg
                                                           xmlns="http://www.w3.org/2000/svg"
                                                           viewBox="0 0 16 16"
@@ -660,7 +685,9 @@
                                                 <div>
                                                   <div class="_b7b6bk">
                                                     <div class="_1qyi2pa">
-                                                      <div class="font-semibold">
+                                                      <div
+                                                        class="font-semibold"
+                                                      >
                                                         <h3
                                                           tabindex="-1"
                                                           class="_14i3z6h"
@@ -712,7 +739,9 @@
                                                 <div>
                                                   <div class="_b7b6bk">
                                                     <div class="_1qyi2pa">
-                                                      <div class="font-semibold">
+                                                      <div
+                                                        class="font-semibold"
+                                                      >
                                                         <h3
                                                           tabindex="-1"
                                                           class="_14i3z6h"
@@ -823,7 +852,9 @@
                                                     <div class="_ranq7o">
                                                       <div class="w-full">
                                                         <div class="_1rbjsj">
-                                                          <div class="flex-content-between">
+                                                          <div
+                                                            class="flex-content-between"
+                                                          >
                                                             Pay in full
                                                             <div>
                                                               ₱171,005.37
@@ -851,7 +882,9 @@
                                                     <div class="_ranq7o">
                                                       <div class="w-full">
                                                         <div class="_1rbjsj">
-                                                          <div class="flex-content-between">
+                                                          <div
+                                                            class="flex-content-between"
+                                                          >
                                                             Pay part now, part
                                                             later
                                                             <div>
@@ -957,7 +990,9 @@
                                                 <div class="block">
                                                   <div>
                                                     <div>
-                                                      <div class="flex-content-between">
+                                                      <div
+                                                        class="flex-content-between"
+                                                      >
                                                         <div>
                                                           <div class="_12hv04d">
                                                             ₱49,950.00 x 3
@@ -972,7 +1007,9 @@
                                                       </div>
                                                     </div>
                                                     <div class="_64pbdv">
-                                                      <div class="flex-content-between">
+                                                      <div
+                                                        class="flex-content-between"
+                                                      >
                                                         <div>
                                                           <div class="_12hv04d">
                                                             Service fee
@@ -986,7 +1023,9 @@
                                                       </div>
                                                     </div>
                                                     <div class="_64pbdv">
-                                                      <div class="flex-content-between">
+                                                      <div
+                                                        class="flex-content-between"
+                                                      >
                                                         <div>
                                                           <div
                                                             class="_1x5uynhu"
@@ -1114,7 +1153,7 @@
                                                         </span>
                                                         <button
                                                           data-testid="quick-pay-payment-options-edit"
-                                                          data-modal='#payment-modal'
+                                                          data-modal="#payment-modal"
                                                           type="button"
                                                           class="_15rpys7s"
                                                         >
@@ -1162,6 +1201,7 @@
                                                   <button
                                                     type="button"
                                                     class="_15rpys7s"
+                                                    data-modal='#coupon-modal'
                                                   >
                                                     Enter a coupon
                                                   </button>
@@ -1975,7 +2015,10 @@
                   </div>
                 </div>
                 <div class="incoming__container dir dir-ltr">
-                  <div class="incoming__wrapper dir dir-ltr" data-testid="Incoming"></div>
+                  <div
+                    class="incoming__wrapper dir dir-ltr"
+                    data-testid="Incoming"
+                  ></div>
                 </div>
                 <div
                   class="app-theme-visibility dir dir-ltr"
@@ -2796,7 +2839,9 @@
                                                           payment method
                                                         </span>
                                                         <div>
-                                                          <div class="payment-option__described-btn-wrap">
+                                                          <div
+                                                            class="payment-option__described-btn-wrap"
+                                                          >
                                                             <button
                                                               id="dropdown-selector-payment_option_selector-button"
                                                               type="button"
@@ -3115,6 +3160,7 @@
                                                   <button
                                                     type="button"
                                                     class="btn-link-condensed"
+                                                    data-modal='#coupon-modal'
                                                   >
                                                     Enter a coupon
                                                   </button>
@@ -4650,6 +4696,120 @@
       </div>
     </div>
 
-      <script src="assets/js/components.js"></script>
+    <!-- Coupon modal -->
+    <div dir="ltr" class="hidden" id="coupon-modal">
+      <div class="modal__backdrop"></div>
+      <section>
+        <div class="modal__container" data-testid="modal-container">
+          <div class="contents">
+            <div
+              class="container__border-0"
+              aria-hidden="true"
+              tabindex="0"
+            ></div>
+            <div class="contents">
+              <div
+                role="dialog"
+                aria-label="Add card details"
+                aria-modal="true"
+                class="modal-dialog__content-wrapper"
+                style="position: relative"
+              >
+                <div class="modal__close">
+                  <button
+                    aria-label="Close"
+                    type="button"
+                    class="btn-close"
+                    data-button="close"
+                  >
+                    <span class="relative">
+                      <svg
+                        viewBox="0 0 32 32"
+                        xmlns="http://www.w3.org/2000/svg"
+                        aria-hidden="true"
+                        role="presentation"
+                        focusable="false"
+                        style="
+                          display: block;
+                          fill: none;
+                          height: 16px;
+                          width: 16px;
+                          stroke: currentcolor;
+                          stroke-width: 3;
+                          overflow: visible;
+                        "
+                      >
+                        <path d="m6 6 20 20"></path>
+                        <path d="m26 6-20 20"></path>
+                      </svg>
+                    </span>
+                  </button>
+                </div>
+                <header class="modal__header-container">
+                  <div class="modal__header-wrapper"></div>
+                  <div class="modal__heading">
+                    <h1
+                      tabindex="-1"
+                      class="heading"
+                      elementtiming="LCP-target"
+                    >
+                      <div class="modal__header-text">
+                        <div class="_b9qfkc2">Coupons</div>
+                      </div>
+                    </h1>
+                  </div>
+                  <div class="modal__heading-wrapper"></div>
+                </header>
+                <div class="_12kfhdn">
+                  <div id="quick-pay-v2-coupon-modal-content">
+                    <form>
+                      <div class="_1jj61m9">
+                        <label
+                          class="_1yw7hpv"
+                          for="quick_pay.coupon.modal.code_input"
+                        >
+                          <div class="_1jn0ze9">
+                            <div class="spinner-chart__input-title-text">Enter a coupon code</div>
+                          </div>
+                          <div dir="ltr">
+                            <div class="_js9i23">
+                              <input
+                                name="quick_pay.coupon.modal.code_input"
+                                class="_c5rhl5"
+                                id="quick_pay.coupon.modal.code_input"
+                                autocomplete="off"
+                                type="text"
+                                aria-describedby="quick_pay.coupon.modal.code_input_error"
+                                value=""
+                              />
+                            </div>
+                          </div>
+                        </label>
+                      </div>
+                      <div class="_64pbdv">
+                        <button disabled="" type="submit" class="_148dgdpk">
+                          Apply
+                        </button>
+                      </div>
+                    </form>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div
+              class="container__border-0"
+              aria-hidden="true"
+              tabindex="0"
+            ></div>
+          </div>
+        </div>
+      </section>
+      <div class="container__border-0">
+        <div aria-live="polite" aria-atomic="true"></div>
+        <div aria-live="assertive" aria-atomic="true"></div>
+      </div>
+    </div>
+
+    <script src="assets/js/components.js"></script>
   </body>
 </html>
