add welcome back inline in payment

--- a/trips.html
+++ b/trips.html
@@ -875,7 +875,7 @@
                                 <div style="--gp-section-max-width:1440px;">
                                     <div class="_le6wlg">
                                         <div class="plmw1e5 mq5rv0q dir dir-ltr" style="--maxWidth:1120px;">
-                                            <div class="_npr0qi" style="border-top-color: rgb(221, 221, 221);"></div>
+                                            <div class="contact-host__border-top-color" style="border-top-color: rgb(221, 221, 221);"></div>
                                             <div data-plugin-in-point-id="HELP_CENTER_LINK_ROW" data-section-id="HELP_CENTER_LINK_ROW" style="padding-top: 24px; padding-bottom: 36px;">
                                                 <div><span class="t1wc0j5d dir dir-ltr"><span class="_y9cbsa" style="--tl-color:#222222; --tl-font-size:14px; --tl-font-weight:400; --tl-line-height:18px;">Can’t find your reservation&nbsp;here?</span></span><span data-testid="help-action" class="b1kpyyrv dir dir-ltr"><a aria-label="Visit the Help&nbsp;Center" href="/help?audience=guest" class="_1sikdxcl">Visit the Help&nbsp;Center</a></span></div>
                                             </div>
