--- a/basics.html
+++ b/basics.html
@@ -529,35 +529,20 @@
                 <div class="site-content__page-wrapper">
                   <div class="site-content__page-container" id="lyt-page-container">
                     <div id="lyt-main-header" class="site-content__page-header">
-                      <div class="header__logo">
-                        <button
-                          id="side-nav-toggle"
-                          aria-expanded="true"
-                          type="button"
-                          class="header__logo-btn"
-                        >
-                          <span class="box-border"
-                            ><svg
-                              viewBox="0 0 16 16"
-                              role="img"
-                              aria-hidden="false"
-                              aria-label="Toggle step navigation"
-                              focusable="false"
-                              style="
-                                height: 14px;
-                                width: 14px;
-                                display: block;
-                                fill: currentcolor;
-                              "
-                            >
-                              <path
-                                d="m15.25 12.5a.75.75 0 01-.75.75h-13a .75.75 0 010-1.5h13a .75.75 0 01 .75.75zm-.75-5.75h-13a .75.75 0 100 1.5h13a .75.75 0 000-1.5zm-13-3.5h13a .75.75 0 000-1.5h-13a .75.75 0 100 1.5z"
-                                fill-rule="evenodd"
-                              ></path>
-                            </svg>
-                          </span>
-                        </button>
-                      </div>
+                      <div class="hidden-xl">
+  <button id="side-nav-toggle" aria-expanded="true" type="button" class="header__logo-btn">
+    <span>
+      <svg viewBox="0 0 16 16" role="img" aria-hidden="false" aria-label="Toggle step navigation" focusable="false" style="
+          height: 14px;
+          width: 14px;
+          display: block;
+          fill: currentcolor;
+        ">
+        <path d="m15.25 12.5a.75.75 0 01-.75.75h-13a .75.75 0 010-1.5h13a .75.75 0 01 .75.75zm-.75-5.75h-13a .75.75 0 100 1.5h13a .75.75 0 000-1.5zm-13-3.5h13a .75.75 0 000-1.5h-13a .75.75 0 100 1.5z" fill-rule="evenodd"></path>
+      </svg>
+    </span>
+  </button>
+</div>
                       <div class="header__logo-btn-text">Basics</div>
                     </div>
                     <section class="site-content__page-content">
