--- a/calendar_agenda.html
+++ b/calendar_agenda.html
@@ -132,7 +132,7 @@
                   </div>
                 </div>
               </div>
-              <div class="contents">
+              <div class="contents hidden-xl">
                 <div class="_b21f4g" aria-hidden="true"></div>
                 <div class="contents">
                   <div id="hosting-flyout-menu" aria-label="Open hosting menu">
