fix inbox header

--- a/inbox.html
+++ b/inbox.html
@@ -144,7 +144,7 @@
                 </div>
                 <div class="contents">
                   <div class="_b21f4g" aria-hidden="true"></div>
-                  <div class="contents">
+                  <div class="contents hidden-xl">
                     <div id="hosting-flyout-menu" aria-label="Open hosting menu">
                       <div class="_11rss4h">
                         <div class="flex-bar">
