--- a/edit/GuestReq.html
+++ b/edit/GuestReq.html
@@ -1680,7 +1680,7 @@ Guests should know how to fry food and also bring boiled eggs.</textarea
                                             <button
                                               role="radio"
                                               title="Light"
-                                              class="getting_set_up_improvement_btn"
+                                              class="badge-active"
                                               aria-checked="true"
                                               type="button"
                                             >
@@ -1695,7 +1695,7 @@ Guests should know how to fry food and also bring boiled eggs.</textarea
                                             <button
                                               role="radio"
                                               title="Moderate"
-                                              class="guest-req__category-option-btn"
+                                              class="badge"
                                               aria-checked="false"
                                               type="button"
                                             >
@@ -1710,7 +1710,7 @@ Guests should know how to fry food and also bring boiled eggs.</textarea
                                             <button
                                               role="radio"
                                               title="Strenuous"
-                                              class="guest-req__category-option-btn"
+                                              class="badge"
                                               aria-checked="false"
                                               type="button"
                                             >
@@ -1725,7 +1725,7 @@ Guests should know how to fry food and also bring boiled eggs.</textarea
                                             <button
                                               role="radio"
                                               title="Extreme"
-                                              class="guest-req__category-option-btn"
+                                              class="badge"
                                               aria-checked="false"
                                               type="button"
                                             >
@@ -1775,7 +1775,7 @@ Guests should know how to fry food and also bring boiled eggs.</textarea
                                             <button
                                               role="radio"
                                               title="Beginner"
-                                              class="getting_set_up_improvement_btn"
+                                              class="badge-active"
                                               aria-checked="true"
                                               type="button"
                                             >
@@ -1790,7 +1790,7 @@ Guests should know how to fry food and also bring boiled eggs.</textarea
                                             <button
                                               role="radio"
                                               title="Intermediate"
-                                              class="guest-req__category-option-btn"
+                                              class="badge"
                                               aria-checked="false"
                                               type="button"
                                             >
@@ -1805,7 +1805,7 @@ Guests should know how to fry food and also bring boiled eggs.</textarea
                                             <button
                                               role="radio"
                                               title="Advanced"
-                                              class="guest-req__category-option-btn"
+                                              class="badge"
                                               aria-checked="false"
                                               type="button"
                                             >
@@ -1820,7 +1820,7 @@ Guests should know how to fry food and also bring boiled eggs.</textarea
                                             <button
                                               role="radio"
                                               title="Expert"
-                                              class="guest-req__category-option-btn"
+                                              class="badge"
                                               aria-checked="false"
                                               type="button"
                                             >
