--- a/submission/guestReq.html
+++ b/submission/guestReq.html
@@ -1319,7 +1319,7 @@
                                   <div class="guest-req__category-option">
                                     <button
                                       data-testid="Tag:4605"
-                                      class="getting_set_up_improvement_btn"
+                                      class="badge-active"
                                       role="radio"
                                       aria-invalid="false"
                                       aria-checked="true"
@@ -1332,7 +1332,7 @@
                                       ></button
                                     ><button
                                       data-testid="Tag:4606"
-                                      class="guest-req__category-option-btn"
+                                      class="badge"
                                       role="radio"
                                       aria-invalid="false"
                                       aria-checked="false"
@@ -1345,7 +1345,7 @@
                                       ></button
                                     ><button
                                       data-testid="Tag:4607"
-                                      class="guest-req__category-option-btn"
+                                      class="badge"
                                       role="radio"
                                       aria-invalid="false"
                                       aria-checked="false"
@@ -1358,7 +1358,7 @@
                                       ></button
                                     ><button
                                       data-testid="Tag:6462"
-                                      class="guest-req__category-option-btn"
+                                      class="badge"
                                       role="radio"
                                       aria-invalid="false"
                                       aria-checked="false"
@@ -1395,7 +1395,7 @@
                                   <div class="guest-req__category-option">
                                     <button
                                       data-testid="Tag:4790"
-                                      class="getting_set_up_improvement_btn"
+                                      class="badge-active"
                                       role="radio"
                                       aria-invalid="false"
                                       aria-checked="true"
@@ -1408,7 +1408,7 @@
                                       ></button
                                     ><button
                                       data-testid="Tag:4791"
-                                      class="guest-req__category-option-btn"
+                                      class="badge"
                                       role="radio"
                                       aria-invalid="false"
                                       aria-checked="false"
@@ -1421,7 +1421,7 @@
                                       ></button
                                     ><button
                                       data-testid="Tag:4792"
-                                      class="guest-req__category-option-btn"
+                                      class="badge"
                                       role="radio"
                                       aria-invalid="false"
                                       aria-checked="false"
@@ -1434,7 +1434,7 @@
                                       ></button
                                     ><button
                                       data-testid="Tag:179"
-                                      class="guest-req__category-option-btn"
+                                      class="badge"
                                       role="radio"
                                       aria-invalid="false"
                                       aria-checked="false"
