rename & refactor progress-bar

--- a/resolutions.html
+++ b/resolutions.html
@@ -69,9 +69,9 @@
                   ><a href="/resolutions" class="text-link">Exit</a></span
                 >
               </div>
-              <div class="progress-bar__wrapper" role="progressbar" aria-valuenow="20">
+              <div class="progress-bar-top" role="progressbar" aria-valuenow="20">
                 <span
-                  class="progress-bar__wrapper-span"
+                  class="progress-bar-top__bar"
                   data-dls-continuous-progress-filled=""
                   style="width: 20%"
                 ></span>
