--- a/resolutions_2.html
+++ b/resolutions_2.html
@@ -95,9 +95,9 @@
                   ><a href="/resolutions" class="text-link">Exit</a></span
                 >
               </div>
-              <div class="progress-bar__wrapper" role="progressbar" aria-valuenow="30">
+              <div class="progress-bar-top" role="progressbar" aria-valuenow="30">
                 <span
-                  class="progress-bar__wrapper-span"
+                  class="progress-bar-top__bar"
                   data-dls-continuous-progress-filled=""
                   style="width: 30%"
                 ></span>
