--- a/resolutions_3.html
+++ b/resolutions_3.html
@@ -128,9 +128,9 @@
                   ><a href="/resolutions" class="text-link">Exit</a></span
                 >
               </div>
-              <div class="progress-bar__wrapper" role="progressbar" aria-valuenow="60">
+              <div class="progress-bar-top" role="progressbar" aria-valuenow="60">
                 <span
-                  class="progress-bar__wrapper-span"
+                  class="progress-bar-top__bar"
                   data-dls-continuous-progress-filled=""
                   style="width: 60%"
                 ></span>
