--- a/reviews.html
+++ b/reviews.html
@@ -1332,15 +1332,15 @@
                     </div>
                   </section>
                   <!-- /5th page -->
-                  <div class="_107yoem">
-                    <div class="_1adtjk3">
+                  <div class="progress-bar-bottom">
+                    <div class="progress-bar-bottom__inner">
                       <div
                         role="progressbar"
                         aria-valuenow="1"
                         aria-valuemin="0"
                         aria-valuemax="5"
                         aria-label="Your progress: step 1 out of 5."
-                        class="_1rcz3vn"
+                        class="progress-bar-bottom__bar"
                         style="transform: scaleX(0.2)"
                       ></div>
                     </div>
