fix trips desktop

--- a/trips.html
+++ b/trips.html
@@ -348,7 +348,7 @@
                                             "
                                             media="(min-width: 1439.1px)" />
                                           <img
-                                            class="img-full"
+                                            class="img-full absolute"
                                             aria-hidden="true"
                                             alt=""
                                             elementtiming="LCP-target"
@@ -706,8 +706,7 @@
                                           --tl-font-weight: 400;
                                           --tl-line-height: 18px;
                                         "
-                                        >Can’t find your
-                                        reservation&nbsp;here?</span
+                                        >Can’t find your reservation&nbsp;here?</span
                                       ></span
                                     ><span
                                       data-testid="help-action"
